--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 
 			gtag('config', 'G-30721QK888');
 		</script>
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9818389864179883" crossorigin="anonymous"></script>
 	</head>
 	<body>
 		<div id="wrapper">
