--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <meta property="twitter:title" content="Cookie Clicker">
     <meta property="twitter:description" content="Cookie Clicker: Bake billions of cookies, unlock wacky upgrades, and build your sweet empire in this addictive idle game. Warning: May cause cravings! 🍪">
     <meta property="twitter:image" content="/cookie-clicker-logo.png">
+    <link rel="canonical" href="https://cookieclickerfree.github.io/" />
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="shortcut icon" href="/favicon.ico" />
@@ -344,6 +345,92 @@
                   (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
               </div>
+            </div>
+            <style>
+              :root{--primary-color: #f6f8fa;--secondary-color: #e0d7f0;--background-color: #fff7e6;--card-background: #ffffff;--text-color: #333333;--border-radius: 8px;--spacing-sm: 1rem;--spacing-md: 2rem;--spacing-lg: 2rem}*{margin: 0;padding: 0;box-sizing: border-box}body{font-family: Arial, sans-serif;line-height: 1.6;color: var(--text-color);background-color: var(--background-color)}.container{max-width: 1200px;margin: 0 auto;padding: 0 var(--spacing-sm)}header{text-align: center;padding: var(--spacing-lg) 0}h1{font-size: 2.5rem;color: var(--primary-color);margin-bottom: var(--spacing-sm)}h2{font-size: 1.8rem;color: var(--secondary-color);margin-bottom: var(--spacing-sm)}h3{font-size: 1.3rem;margin-bottom: var(--spacing-sm)}section{margin-bottom: var(--spacing-lg)}.subtitle{font-size: 1.2rem;color: #666}.card{background-color: var(--card-background);border-radius: var(--border-radius);padding: var(--spacing-md);box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);margin-bottom: var(--spacing-sm)}.game-info-grid{display: grid;grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));gap: var(--spacing-sm)}.game-info-item{margin-bottom: var(--spacing-sm)}.controls-list{list-style: none}.controls-list li{margin-bottom: 0.5rem}.tips-list{list-style-disc;padding-left: var(--spacing-md);margin-bottom: var(--spacing-sm)}.how-to-play-list{list-style-decimal;padding-left: var(--spacing-md);margin: var(--spacing-sm) 0}.bold{font-weight: bold}.faq-item{margin-bottom: var(--spacing-sm)}.faq-question{font-weight: bold;margin-bottom: 0.5rem}footer{text-align: center;padding: var(--spacing-lg) 0;color: #666}@media (max-width: 768px){.container{padding: 0 var(--spacing-sm)}h1{font-size: 2rem}h2{font-size: 1.5rem}.game-info-grid{grid-template-columns: 1fr}}
+            </style>
+            <div class="container">
+              <h1>Cookie Clicker</h1>
+              <section>
+                <p class="card">Cookie Clicker is an addictive idle game that starts with a simple premise: click a cookie to bake
+                  it. As you accumulate cookies, you'll unlock various upgrades and buildings that automatically produce cookies for
+                  you. What begins as a humble clicking adventure soon transforms into a massive cookie-producing empire!</p>
+                <div class="card game-info-grid">
+                  <ul>
+                    <li class="game-info-item"><span class="bold">Developer:</span> Julien "Orteil" Thiennot</li>
+                    <li class="game-info-item"><span class="bold">Release Date:</span> August 10, 2013</li>
+                    <li class="game-info-item"><span class="bold">Platform:</span> Web Browser</li>
+                    <li class="game-info-item"><span class="bold">Last Updated:</span> February 2025</li>
+                    <li class="game-info-item"><span class="bold">Genre:</span> Idle/Incremental</li>
+                    <li class="game-info-item"><span class="bold">Price:</span> Free to Play</li>
+                  </ul>
+                </div>
+              </section>
+              <section>
+                <h2>How To Play</h2>
+                <div class="card">
+                  <p>Getting started with Cookie Clicker is simple:</p>
+                  <ol class="how-to-play-list">
+                    <li>Click the big cookie to produce your first cookies</li>
+                    <li>Use earned cookies to buy buildings and upgrades</li>
+                    <li>Buildings automatically produce cookies over time</li>
+                    <li>Purchase upgrades to increase your production</li>
+                    <li>Unlock achievements and special features as you progress</li>
+                  </ol>
+                </div>
+              </section>
+              <section>
+                <h2>Controls</h2>
+                <div class="card">
+                  <ul class="controls-list">
+                    <li><span class="bold">Left Mouse Click:</span> Click the cookie or buy upgrades</li>
+                    <li><span class="bold">Ctrl + Click:</span> Purchase 10 items at once</li>
+                    <li><span class="bold">Shift + Click:</span> Purchase 100 items at once</li>
+                    <li><span class="bold">Number Keys (1-9):</span> Quick select buildings</li>
+                  </ul>
+                </div>
+              </section>
+              <section>
+                <h2>Tips and Tricks</h2>
+                <div class="card">
+                  <h3>For Beginners:</h3>
+                  <ul class="tips-list">
+                    <li>Focus on clicking initially to build up your first cookies</li>
+                    <li>Buy Cursors and Grandmas early for automatic production</li>
+                    <li>Save up for more expensive buildings when possible</li>
+                    <li>Watch for golden cookies - they provide valuable bonuses</li>
+                  </ul>
+                  <h3>Advanced Strategies:</h3>
+                  <ul class="tips-list">
+                    <li>Stack multiple golden cookie effects for maximum profits</li>
+                    <li>Plan your upgrades around Achievement hunting</li>
+                    <li>Use the Stock Market mini-game wisely</li>
+                    <li>Time your Garden harvests with production boosts</li>
+                  </ul>
+                </div>
+              </section>
+              <section>
+                <h2>FAQ</h2>
+                <div class="card faq-item">
+                  <h3 class="faq-question">Is Cookie Clicker free to play?</h3>
+                  <p>Yes, the web version is completely free to play in your browser.</p>
+                </div>
+                <div class="card faq-item">
+                  <h3 class="faq-question">Can I save my progress?</h3>
+                  <p>The game automatically saves your progress in your browser's local storage. You can also export your save code
+                    to transfer between devices.</p>
+                </div>
+                <div class="card faq-item">
+                  <h3 class="faq-question">Does Cookie Clicker have an ending?</h3>
+                  <p>While there's no definitive "end," the game features numerous achievements and challenges to complete,
+                    providing endless gameplay.</p>
+                </div>
+                <div class="card faq-item">
+                  <h3 class="faq-question">What happens if I close my browser?</h3>
+                  <p>Cookie Clicker continues to calculate your cookie production even when the game is closed, allowing for offline
+                    progress.</p>
+                </div>
+              </section>
             </div>
           </div>
           <!-- /ad -->
